[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/options.gd" type="Script" id=1]
[ext_resource path="res://SFX/changeSwitch.wav" type="AudioStream" id=2]
[ext_resource path="res://SFX/clickChoose.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/IdeaOptionBack.png" type="Texture" id=4]

[node name="Options" type="Popup"]
anchor_left = 0.156
anchor_top = 0.08
anchor_right = 0.836
anchor_bottom = 0.907
margin_left = 0.255997
margin_right = -0.0640259
margin_bottom = -0.200012
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = -0.028
anchor_right = 1.034
anchor_bottom = 1.012
margin_left = -4.512
margin_right = 8.336
margin_bottom = 0.0480042
texture = ExtResource( 4 )
expand = true

[node name="TabContainer" type="TabContainer" parent="."]
anchor_top = 0.032
anchor_right = 1.011
anchor_bottom = 0.597
margin_top = 0.127999
margin_right = 0.343994
margin_bottom = 191.888
tab_align = 0

[node name="Video" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Video"]
anchor_left = 0.017
anchor_top = 0.018
anchor_right = 0.983
anchor_bottom = 0.972
margin_left = 0.167999
margin_top = 0.151999
margin_right = -0.16803
margin_bottom = 0.207977

[node name="Main Menu" type="Button" parent="TabContainer/Video/VBoxContainer"]
margin_right = 672.0
margin_bottom = 20.0
text = "Main Menu"

[node name="Audio" type="Tabs" parent="TabContainer"]
visible = false
margin_top = 24.0
margin_right = 255.0
margin_bottom = 44.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Audio"]
anchor_left = 0.017
anchor_top = 0.018
anchor_right = 0.983
anchor_bottom = 0.972
margin_left = 0.167999
margin_top = 0.151999
margin_right = -0.16803
margin_bottom = 0.207977

[node name="Main Menu" type="Button" parent="TabContainer/Audio/VBoxContainer"]
margin_right = 672.0
margin_bottom = 20.0
text = "Main Menu"

[node name="Gameplay" type="Tabs" parent="TabContainer"]
visible = false
margin_top = 24.0
margin_right = 255.0
margin_bottom = 68.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Gameplay"]
anchor_left = 0.017
anchor_top = 0.018
anchor_right = 0.983
anchor_bottom = 0.972
margin_left = 0.167999
margin_top = 0.151999
margin_right = -0.16803
margin_bottom = 0.207977

[node name="Main Menu" type="Button" parent="TabContainer/Gameplay/VBoxContainer"]
margin_right = 672.0
margin_bottom = 20.0
text = "Main Menu"

[node name="changeSwitch" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -10.0

[node name="clickChoose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="tab_clicked" from="TabContainer/Video" to="." method="_on_Video_tab_clicked"]
[connection signal="tab_hover" from="TabContainer/Video" to="." method="_on_Video_tab_hover"]
[connection signal="mouse_entered" from="TabContainer/Video/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_mouse_entered"]
[connection signal="pressed" from="TabContainer/Video/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="tab_clicked" from="TabContainer/Audio" to="." method="_on_Audio_tab_clicked"]
[connection signal="tab_hover" from="TabContainer/Audio" to="." method="_on_Audio_tab_hover"]
[connection signal="mouse_entered" from="TabContainer/Audio/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_mouse_entered"]
[connection signal="pressed" from="TabContainer/Audio/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="tab_clicked" from="TabContainer/Gameplay" to="." method="_on_Gameplay_tab_clicked"]
[connection signal="tab_hover" from="TabContainer/Gameplay" to="." method="_on_Gameplay_tab_hover"]
[connection signal="mouse_entered" from="TabContainer/Gameplay/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_mouse_entered"]
[connection signal="pressed" from="TabContainer/Gameplay/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
